# auto_clicker

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: DEVLOG.md
docs/superpowers/plans/: 2026-04-14-autoclicker-implementation.md
docs/superpowers/specs/: 2026-04-14-autoclicker-design.md
src/auto_clicker/: __main__.py  app.py
src/auto_clicker/engine/: config.py  engine.py  scheduler.py  sinks.py  sources.py  stops.py
src/auto_clicker/hotkeys/: backend.py  controller.py
src/auto_clicker/ui/: main_window.py  theme.py
src/auto_clicker/ui/widgets/: hotkey_edit.py  point_capture.py
src/auto_clicker/win32/: hooks.py  hotkey.py  input.py  timing.py
tests/: conftest.py
tests/engine/: test_config.py  test_engine.py  test_scheduler.py  test_sinks.py  test_sources.py  test_stops.py
tests/hotkeys/: test_controller.py
