[project]
name = "auto_clicker"
version = "0.1.0"
description = "Windows autoclicker with precise cadence and global hotkeys."
requires-python = ">=3.13"
dependencies = [
    "PySide6>=6.7",
    "pyqtdarktheme-fork>=2.3.2; python_version>='3.13'",
]

[project.scripts]
auto-clicker = "auto_clicker.__main__:main"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/auto_clicker"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-markers"
markers = [
    "windows_only: mark test to run only on Windows",
]

[tool.coverage.run]
source = ["src/auto_clicker"]
omit = [
    "src/auto_clicker/ui/*",
    "src/auto_clicker/win32/*",
    "src/auto_clicker/__main__.py",
    "src/auto_clicker/app.py",
]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:", "\\.\\.\\."]
fail_under = 80

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["N802"]
